# CPPstudy

./: .gitignore  CMakeLists.txt  README.md  chat_promts.md  clone_exercise.md  how_git.md  mysql.txt  top_menu.md
Behavioral/ChainOfResponsibility/: README.md  cover.odp  open.md  prompt.md
Caleb/: README.md
Caleb/Lesson001/: CMakeLists.txt  youtube.cpp
Caleb/Lesson002/: CMakeLists.txt  youtube.cpp
Creational/AbstractFactory/: open.md  outline  splash.xcf
Creational/AbstractFactory/code/: AbstractFactory.h  AbstractProductA.h  AbstractProductB.h  CMakeLists.txt  ConcreteFactory1.h  ConcreteFactory2.h  ConcreteProductA1.h  ConcreteProductA2.h  ConcreteProductB1.h  ConcreteProductB2.h  README.md  main.cpp  script.md
Creational/Factory/: title.md
Creational/Singleton/: README.md  (+2 more)
chats/: chat20250527.md  chat20250530.md  chat250518.md  chat250519.md  chat250522.md  chat250523-install-os.md  chat_promts.md  git_how.md
starter/: code_show.odp  why.odp
web_help/: CPP_Structural_Adapter.md  CSharp_Structural_Adapter.md  GitHub_Desktop_on_Ubuntu_Troubleshooting_Summary.md  GitHub_README_Navigation_blob_Confusion_Summary.md  MASTER_page.md  PROMPTS.md  bible_prompt.md  blocksy_assestance.md  build_email_list.md  code.md  convert_to_html.md  covert_READM_to_HTML.md  file_reduce_mp3.md  posting_to_x.md  posts-help.md  prep_video.md  prompt-1.md  prompt-POST.md  social_media_post.md  sound_issues.md  tt_audacity.md  using_elementor.md  word_not_return_empty.md  yoast-help.md  youtube_promote.md
work/: intro.odt  notes.md  solution.md  tweet.txt  youtube.txt
(+163 files in other folders)
